--- a/app/views/expense-modal.html
+++ b/app/views/expense-modal.html
@@ -5,16 +5,15 @@
   </div>
   <div class="modal-body">
     <div class="form-group">
-      <label>Date</label>
-      <input type="date" ng-model="expense.Date" class="form-control">
-    </div>
-    <div class="form-group">
       <label>Particulars</label>
       <input type="text" ng-model="expense.Particulars" class="form-control">
     </div>
     <div class="form-group">
       <label>Head of Account</label>
-      <input type="text" ng-model="expense.HeadofAccount" class="form-control">
+      <!--<input type="text" ng-model="expense.HeadofAccount" class="form-control">-->
+      <input type="text" ng-model="expense.HeadofAccount"
+             uib-typeahead="head for head in heads | filter:$viewValue"
+             class="form-control">
     </div>
     <div class="form-group">
       <label>Amount</label>
@@ -24,6 +23,10 @@
         <span class="input-group-addon">Ps.</span>
         <input type="number" class="form-control" aria-label="Amount Ps" min="0" max="100" ng-model="expense.Amount.minor">
       </div>
+    </div>
+    <div class="form-group">
+      <label>Bill No</label>
+      <input type="text" ng-model="expense.BillNo" class="form-control">
     </div>
     <div class="modal-footer">
       <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
