--- a/app/views/info-dialog.html
+++ b/app/views/info-dialog.html
@@ -1,6 +1,6 @@
 <script type="text/ng-template" id="InformationDialogModal.html">
   <div class="modal-header">
-    <h3 class="modal-title">Status</h3>
+    <h3 class="modal-title">Alert</h3>
   </div>
   <div class="modal-body">
     {{informationMessage}}
