--- a/app/views/voucher.html
+++ b/app/views/voucher.html
@@ -11,6 +11,10 @@
 <!-- Modal dialog for creating/editing individual expenses -->
 <div ng-include="'/views/expense-modal.html'"></div>
 
+<!-- Confirmation and Alert dialogs -->
+<div ng-include="'/views/confirm-dialog.html'"></div>
+<div ng-include="'/views/info-dialog.html'"></div>
+
 <!-- The form copies the exact format used by the Vouchers in Purandara -->
 <!-- Top Row a Box with the Recipient details and VR No, Date -->
 <div print-section class="panel panel-primary">
@@ -32,7 +36,8 @@
             <td>
               <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">Vr. No.</span>
-                <input type="text" class="form-control" placeholder="" aria-describedby="basic-addon1">
+                <input type="text" class="form-control" placeholder="" aria-describedby="basic-addon1"
+                       ng-model="voucher.VrNo" ng-disabled="true">
               </div>
             </td>
           </tr>
@@ -40,8 +45,16 @@
             <td>
               <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">Date</span>
-                <input type="date" class="form-control" placeholder="dd/mm/yyyy" aria-describedby="basic-addon1" required="true"
-                       ng-model="formattedDate">
+                <!--<input type="date" class="form-control" placeholder="dd/mm/yyyy" aria-describedby="basic-addon1" required="true"-->
+                <!--ng-model="formattedDate">-->
+                <input type="text" class="form-control" uib-datepicker-popup="{{format}}"
+                       ng-model="voucher.Date" is-open="datePickerOpened" datepicker-options="dateOptions"
+                       ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-default" ng-click="openDatePicker()">
+                    <i class="glyphicon glyphicon-calendar"></i>
+                  </button>
+                </span>
               </div>
             </td>
           </tr>
@@ -49,115 +62,134 @@
       </div>
     </div>
     <!-- Table Recipient details on left, VR No, Data on the right - Ends-->
-
-    <!-- Expenses begins -->
-    <div class="row">
-      <div class="col-md-8">
-        <h4> Expenses </h4>
-      </div>
-      <div class="col-md-4" ng-if="activeVoucher">
-        <button class="btn btn-success" ng-click="createNewExpense()">
-          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-          Add Expense
-        </button>
-      </div>
-    </div>
-
-    <table class="table table-striped">
-      <tr>
-        <th>
-          Sl. No.
-        </th>
-        <th>
-          Particulars
-        </th>
-        <th>
-          Head
-        </th>
-        <th>
-          Amount (INR)
-        </th>
-        <th></th>
-      </tr>
-      <tr ng-repeat="expense in expenses | orderBy:'SlNo'">
-        <td>
-          {{ expense.SlNo }}
-        </td>
-        <td>
-          {{ expense.Particulars }}
-        </td>
-        <td>
-          {{ expense.HeadofAccount }}
-        </td>
-        <td>
-          {{ expense.Amount.major + '.' + expense.Amount.minor }}
-        </td>
-        <td>
-          <button print-hide ng-if="activeVoucher" class="btn btn-default btn-xs" ng-click="editExpense(expense.SlNo)">
-            <span class="glyphicon glyphicon-edit"></span>
+      <!-- Expenses begins -->
+      <div class="row">
+        <div class="col-md-8">
+          <h4> Expenses </h4>
+        </div>
+        <div class="col-md-4" ng-if="activeVoucher">
+          <button class="btn btn-success" ng-click="createNewExpense()">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+            Add Expense
           </button>
-          <button print-hide ng-if="activeVoucher" class="btn btn-default btn-xs" ng-click="deleteExpense(expense.SlNo)">
-            <span class="glyphicon glyphicon-remove-circle"></span>
-          </button>
-        </td>
-      </tr>
-    </table>
-    <div class="pull-right">
-      <label>Total Amount in this Voucher </label>
-      <span class="badge">{{voucherTotalAmount | currency:"&#8377;"}}</span>
-    </div>
-  </div>
-  <div print-only class="container">
-    <div class="row">
-      <div class="col-md-2"> </div>
-      <div class="col-md-2"> Authorised By</div>
-      <div class="col-md-3">
-        <textarea rows="2"></textarea>
-      </div>
-      <div class="col-md-2"> Recipient Signature</div>
-      <div class="col-md-3">
-        <textarea rows="2"></textarea>
-      </div>
-    </div>
-  </div>
-  <div class="panel-footer">
-    <div class="row">
-      <div class="col-md-7">
-        <div print-hide class="btn-group" ng-if="activeVoucher" role="group" aria-label="...">
-          <button type="button" class="btn btn-default" ng-click="save()">
-            <span class="glyphicon glyphicon-floppy-save"></span> Save</button>
-          <button type="button" class="btn btn-default" ng-click="submit()">
-            <span class="glyphicon glyphicon-ok-sign"></span> Submit</button>
-          <button type="button" class="btn btn-default" ng-click="print()">
-            <span class="glyphicon glyphicon-print"></span> Print</button>
-          <button type="button" class="btn btn-default" ng-click="cancel()">
-            <span class="glyphicon glyphicon-circle-arrow-left"></span> Cancel</button>
-        </div>
-        <div print-hide class="btn-group" ng-if="submittedVoucher" role="group" aria-label="...">
-          <button type="button" class="btn btn-default" ng-if="isManagerViewing" ng-click="approve()">
-            <span class="glyphicon glyphicon-thumbs-up"></span> Approve</button>
-          <button type="button" class="btn btn-default" ng-if="isManagerViewing" ng-click="reject()">
-            <span class="glyphicon glyphicon-thumbs-down"></span> Reject</button>
-          <button type="button" class="btn btn-default" ng-click="print()">
-            <span class="glyphicon glyphicon-print"></span> Print</button>
-          <button type="button" class="btn btn-default" ng-click="cancel()">
-            <span class="glyphicon glyphicon-circle-arrow-left"></span> Cancel</button>
-        </div>
-        <div print-hide class="btn-group" ng-if="archivedVoucher" role="group" aria-label="...">
-          <button type="button" class="btn btn-default" ng-click="print()">
-            <span class="glyphicon glyphicon-print"></span> Print</button>
-          <button type="button" class="btn btn-default" ng-click="cancel()">
-            <span class="glyphicon glyphicon-circle-arrow-left"></span> Back</button>
         </div>
       </div>
-      <div class="col-md-3">
-        <h5 ng-if="archivedVoucher"> Approved by: {{voucher.Approver}}</h5>
-      </div>
-      <div class="col-md-2">
-        <h5 class="pull-right"> {{voucher.State | uppercase}}</h5>
-      </div>
-    </div>
 
+      <table class="table table-striped">
+        <tr>
+          <th>
+            Sl. No.
+          </th>
+          <th>
+            Particulars
+          </th>
+          <th>
+            Head
+          </th>
+          <th>
+            Amount (INR)
+          </th>
+          <th>
+            Bill No
+          </th>
+          <th></th>
+        </tr>
+        <tr ng-repeat="expense in expenses | orderBy:'SlNo'">
+          <td>
+            {{ expense.SlNo }}
+          </td>
+          <td>
+            {{ expense.Particulars }}
+          </td>
+          <td>
+            {{ expense.HeadofAccount }}
+          </td>
+          <td>
+            {{ expense.Amount.major + '.' + expense.Amount.minor }}
+          </td>
+          <td>
+            {{ expense.BillNo }}
+          </td>
+          <td>
+            <button print-hide ng-if="activeVoucher" class="btn btn-default btn-xs" ng-click="editExpense(expense.SlNo)">
+              <span class="glyphicon glyphicon-edit"></span>
+            </button>
+            <button print-hide ng-if="activeVoucher" class="btn btn-default btn-xs" ng-click="deleteExpense(expense.SlNo)">
+              <span class="glyphicon glyphicon-remove-circle"></span>
+            </button>
+          </td>
+        </tr>
+      </table>
+      <div class="pull-right">
+        <label>Total Amount in this Voucher </label>
+        <span class="badge">{{voucherTotalAmount | currency:"&#8377;"}}</span>
+      </div>
+    </div>
+    <!-- Narration -->
+    <div class="row">
+      <div class="col-md-12">
+        <div class="input-group">
+          <span class="input-group-addon" id="narration-addon">Narration</span>
+          <input class="form-control" ng-model="voucher.Narration" placeholder="Optionally add a Narration for this voucher">
+        </div>
+      </div>
+    </div>
+    <!-- Narration -->
+    <div print-only class="container">
+      <div class="row">
+        <div class="col-md-2"> </div>
+        <div class="col-md-2"> Authorised By</div>
+        <div class="col-md-3">
+          <textarea rows="2"></textarea>
+        </div>
+        <div class="col-md-2"> Recipient Signature</div>
+        <div class="col-md-3">
+          <textarea rows="2"></textarea>
+        </div>
+      </div>
+    </div>
+    <div class="panel-footer">
+      <div class="row">
+        <div class="col-md-7">
+          <div print-hide class="btn-group" ng-if="activeVoucher" role="group" aria-label="...">
+            <button type="button" class="btn btn-default" ng-click="save()">
+              <span class="glyphicon glyphicon-floppy-save"></span> Save</button>
+            <button type="button" class="btn btn-default" ng-click="submit()">
+              <span class="glyphicon glyphicon-ok-sign"></span> Submit</button>
+            <button type="button" class="btn btn-default" ng-click="print()">
+              <span class="glyphicon glyphicon-print"></span> Print</button>
+            <button type="button" class="btn btn-default" ng-click="cancel()">
+              <span class="glyphicon glyphicon-circle-arrow-left"></span> Cancel</button>
+            <button type="button" class="btn btn-default" ng-click="deleteVoucher()">
+              <span class="glyphicon glyphicon-remove-circle"></span> Delete</button>
+          </div>
+          <div print-hide class="btn-group" ng-if="submittedVoucher" role="group" aria-label="...">
+            <button type="button" class="btn btn-default" ng-if="isManagerViewing" ng-click="approve()">
+              <span class="glyphicon glyphicon-thumbs-up"></span> Approve</button>
+            <button type="button" class="btn btn-default" ng-if="isManagerViewing" ng-click="reject()">
+              <span class="glyphicon glyphicon-thumbs-down"></span> Reject</button>
+            <button type="button" class="btn btn-default" ng-click="print()">
+              <span class="glyphicon glyphicon-print"></span> Print</button>
+            <button type="button" class="btn btn-default" ng-click="cancel()">
+              <span class="glyphicon glyphicon-circle-arrow-left"></span> Cancel</button>
+          </div>
+          <div print-hide class="btn-group" ng-if="archivedVoucher" role="group" aria-label="...">
+            <button type="button" class="btn btn-success" ng-if="isManagerViewing" ng-click="export()">
+              <span class="glyphicon glyphicon-export"></span> Export To Tally.ERP9</button>
+            <button type="button" class="btn btn-default" ng-click="print()">
+              <span class="glyphicon glyphicon-print"></span> Print</button>
+            <button type="button" class="btn btn-default" ng-click="cancel()">
+              <span class="glyphicon glyphicon-circle-arrow-left"></span> Back</button>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <h5 ng-if="archivedVoucher"> Approved by: {{voucher.Approver}}</h5>
+        </div>
+        <div class="col-md-2">
+          <h5 class="pull-right"> {{voucher.State | uppercase}}</h5>
+        </div>
+      </div>
+
+    </div>
   </div>
-</div>
 
