--- a/app/views/home.html
+++ b/app/views/home.html
@@ -142,7 +142,7 @@
                   </a>
                 </div>
                 <a class="btn btn-default pull-right"
-                   ng-show="activeVouchers.length >= 5"
+                   ng-show="activeVouchers.length >= 1"
                    ng-click="employeeVoucherQuery('draft')">View All</a>
               </div>
             </div>
@@ -171,10 +171,11 @@
                   </a>
                 </div>
                 <a class="btn btn-default pull-right"
-                   ng-show="approvedVouchers.length >= 5"
+                   ng-show="approvedVouchers.length >= 1"
                    ng-click="employeeVoucherQuery('approved')">View All</a>
               </div>
             </div>
+            <!-- TODO View All - change to 5 -->
             <!--Approved vouchers panel ends-->
           </div>
           <!--Right-hand column ends-->
