Fixed 404 for templates (modal html and tally xml)

--- a/app/views/create-voucher.html
+++ b/app/views/create-voucher.html
@@ -8,10 +8,10 @@
   {{error}}
 </div>
 <!-- Modal Window for Expense -->
-<div ng-include="'/views/expense-modal.html'"></div>
+<div ng-include="'views/expense-modal.html'"></div>
 <!-- Confirmation Message -->
-<div ng-include="'/views/confirm-dialog.html'"></div>
-<div ng-include="'/views/info-dialog.html'"></div>
+<div ng-include="'views/confirm-dialog.html'"></div>
+<div ng-include="'views/info-dialog.html'"></div>
 
 <!-- The form copies the exact format used by the Vouchers in Purandara -->
 <!-- Top Row a Box with the Recipient details and VR No, Date -->
