--- a/app/views/voucher.html
+++ b/app/views/voucher.html
@@ -9,11 +9,11 @@
 </div>
 
 <!-- Modal dialog for creating/editing individual expenses -->
-<div ng-include="'/views/expense-modal.html'"></div>
+<div ng-include="'views/expense-modal.html'"></div>
 
 <!-- Confirmation and Alert dialogs -->
-<div ng-include="'/views/confirm-dialog.html'"></div>
-<div ng-include="'/views/info-dialog.html'"></div>
+<div ng-include="'views/confirm-dialog.html'"></div>
+<div ng-include="'views/info-dialog.html'"></div>
 
 <!-- The form copies the exact format used by the Vouchers in Purandara -->
 <!-- Top Row a Box with the Recipient details and VR No, Date -->
