--- a/app/views/voucher.html
+++ b/app/views/voucher.html
@@ -1,7 +1,7 @@
-<div class="page-header">
+<div print-remove="true" class="page-header">
   <h1>Work with Voucher</h1>
 </div>
-<div class="alert alert-danger" role="alert" ng-show="error!==''">
+<div print-remove="true" class="alert alert-danger" role="alert" ng-show="error!==''">
   <span class="glyphicon glyphicon-remove-circle pull-right" ng-click="error=''"></span>
   <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
   <span class="sr-only">Error:</span>
@@ -9,11 +9,14 @@
 </div>
 
 <!-- Modal dialog for creating/editing individual expenses -->
-<div ng-include="'views/expense-modal.html'"></div>
+<div print-hide ng-include="'views/expense-modal.html'"></div>
 
 <!-- Confirmation and Alert dialogs -->
-<div ng-include="'views/confirm-dialog.html'"></div>
-<div ng-include="'views/info-dialog.html'"></div>
+<div print-hide ng-include="'views/confirm-dialog.html'"></div>
+<div print-hide ng-include="'views/info-dialog.html'"></div>
+
+<!-- slight top padding for panel in print -->
+<div print-only="true"><br></div>
 
 <!-- The form copies the exact format used by the Vouchers in Purandara -->
 <!-- Top Row a Box with the Recipient details and VR No, Date -->
@@ -24,12 +27,12 @@
   <div class="panel-body">
     <!-- Table Recipient details on left, VR No, Data on the right-->
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-xs-7">
         <label for="recipient-details">Recipient Name & Address</label>
           <textarea class="form-control" rows="4" id="recipient-details" ng-disabled="true">{{ recipientDetails }}
           </textarea>
       </div>
-      <div class="col-md-5">
+      <div class="col-xs-5">
         <b class="pull-right">BANK/CASH/VOUCHER</b>
         <table class="table table-bordered">
           <tr>
@@ -50,7 +53,7 @@
                 <input type="text" class="form-control" uib-datepicker-popup="{{format}}"
                        ng-model="voucher.Date" is-open="datePickerOpened" datepicker-options="dateOptions"
                        ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
-                <span class="input-group-btn">
+                <span print-hide class="input-group-btn">
                   <button type="button" class="btn btn-default" ng-click="openDatePicker()">
                     <i class="glyphicon glyphicon-calendar"></i>
                   </button>
@@ -64,10 +67,10 @@
     <!-- Table Recipient details on left, VR No, Data on the right - Ends-->
       <!-- Expenses begins -->
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-xs-8">
           <h4> Expenses </h4>
         </div>
-        <div class="col-md-4" ng-if="activeVoucher">
+        <div print-hide class="col-xs-4" ng-if="activeVoucher">
           <button class="btn btn-success" ng-click="createNewExpense()">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             Add Expense
@@ -75,7 +78,7 @@
         </div>
       </div>
 
-      <table class="table table-striped">
+      <table class="table table-striped table-condensed">
         <tr>
           <th>
             Sl. No.
@@ -127,7 +130,7 @@
     </div>
     <!-- Narration -->
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xs-12">
         <div class="input-group">
           <span class="input-group-addon" id="narration-addon">Narration</span>
           <input class="form-control" ng-model="voucher.Narration" placeholder="Optionally add a Narration for this voucher">
@@ -135,22 +138,20 @@
       </div>
     </div>
     <!-- Narration -->
-    <div print-only class="container">
-      <div class="row">
-        <div class="col-md-2"> </div>
-        <div class="col-md-2"> Authorised By</div>
-        <div class="col-md-3">
-          <textarea rows="2"></textarea>
+      <div print-only class="row">
+        <div class="col-xs-2"> </div>
+        <div class="col-xs-2"> Authorised By</div>
+        <div class="col-xs-3">
+          <textarea rows="1"></textarea>
         </div>
-        <div class="col-md-2"> Recipient Signature</div>
-        <div class="col-md-3">
-          <textarea rows="2"></textarea>
+        <div class="col-xs-2"> Recipient Signature</div>
+        <div class="col-xs-3">
+          <textarea rows="1"></textarea>
         </div>
       </div>
-    </div>
-    <div class="panel-footer">
+    <div print-remove="true" class="panel-footer">
       <div class="row">
-        <div class="col-md-7">
+        <div class="col-xs-7">
           <div print-hide class="btn-group" ng-if="activeVoucher" role="group" aria-label="...">
             <button type="button" class="btn btn-default" ng-click="save()">
               <span class="glyphicon glyphicon-floppy-save"></span> Save</button>
@@ -182,10 +183,10 @@
               <span class="glyphicon glyphicon-circle-arrow-left"></span> Back</button>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-xs-3">
           <h5 ng-if="archivedVoucher"> Approved by: {{voucher.Approver}}</h5>
         </div>
-        <div class="col-md-2">
+        <div class="col-xs-2">
           <h5 class="pull-right"> {{voucher.State | uppercase}}</h5>
         </div>
       </div>
