--- a/app/views/voucher.html
+++ b/app/views/voucher.html
@@ -161,8 +161,8 @@
               <span class="glyphicon glyphicon-print"></span> Print</button>
             <button type="button" class="btn btn-default" ng-click="cancel()">
               <span class="glyphicon glyphicon-circle-arrow-left"></span> Cancel</button>
-            <!-- <button type="button" class="btn btn-default" ng-click="deleteVoucher()">
-              <span class="glyphicon glyphicon-remove-circle"></span> Delete</button> -->
+            <button type="button" class="btn btn-default" ng-click="deleteVoucher()">
+              <span class="glyphicon glyphicon-remove-circle"></span> Delete</button>
           </div>
           <div print-hide class="btn-group" ng-if="submittedVoucher" role="group" aria-label="...">
             <button type="button" class="btn btn-default" ng-if="isManagerViewing" ng-click="approve()">
