correct VrNo and master/alter ID issues

--- a/app/views/voucher.html
+++ b/app/views/voucher.html
@@ -40,7 +40,7 @@
               <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">Vr. No.</span>
                 <input type="text" class="form-control" placeholder="" aria-describedby="basic-addon1"
-                       ng-model="voucher.VrNo" ng-disabled="true">
+                       ng-disabled="true">
               </div>
             </td>
           </tr>
