--- a/app/views/expense-modal.html
+++ b/app/views/expense-modal.html
@@ -4,22 +4,23 @@
     <h3 class="modal-title">Expense Details</h3>
   </div>
   <div class="modal-body">
+  <form name="expenseForm" novalidate>
     <div class="form-group">
       <label>Particulars</label>
-      <input type="text" ng-model="expense.Particulars" class="form-control">
+      <input name="particulars" type="text" ng-model="expense.Particulars" class="form-control" required="">
     </div>
     <div class="form-group">
       <label>Head of Account</label>
       <!--<input type="text" ng-model="expense.HeadofAccount" class="form-control">-->
-      <input type="text" ng-model="expense.HeadofAccount"
-             uib-typeahead="head for head in heads | filter:$viewValue"
+      <input name="head" type="text" ng-model="expense.HeadofAccount" required=""
+             uib-typeahead="head for head in heads | filter:$viewValue" typeahead-editable="false"
              class="form-control">
     </div>
     <div class="form-group">
       <label>Amount</label>
       <div class="input-group">
         <span class="input-group-addon">Rs.</span>
-        <input type="number" class="form-control" aria-label="Amount Rs" min="0" ng-model="expense.Amount.major">
+        <input name="amountMajor" type="number" class="form-control" aria-label="Amount Rs" min="0" ng-model="expense.Amount.major" required="">
         <span class="input-group-addon">Ps.</span>
         <input type="number" class="form-control" aria-label="Amount Ps" min="0" max="100" ng-model="expense.Amount.minor">
       </div>
@@ -29,9 +30,18 @@
       <input type="text" ng-model="expense.BillNo" class="form-control">
     </div>
     <div class="modal-footer">
-      <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+      <button class="btn btn-primary" type="button" ng-disabled="expenseForm.$invalid" ng-click="ok()">OK</button>
       <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
     </div>
+    <div class="padding">
+      <p ng-show="expenseForm.particulars.$error.required && !expenseForm.particulars.$pristine">
+      * Particulars is required</p>
+      <p ng-show="expenseForm.head.$error.required && !expenseForm.head.$pristine">
+      * Expense Head is Required</p>
+      <p ng-show="expenseForm.amountMajor.$error.required && !expenseForm.amountMajor.$pristine">
+      * Expense amount is required</p>
+    </div>
+    </form>
   </div>
 </script>
 <!-- Add expense Pop-up template ends -->
