expense duplication, back button, validation and manager-change-expense-head fixes

--- a/app/views/expense-modal.html
+++ b/app/views/expense-modal.html
@@ -13,7 +13,7 @@
       <label>Head of Account</label>
       <!--<input type="text" ng-model="expense.HeadofAccount" class="form-control">-->
       <input name="head" type="text" ng-model="expense.HeadofAccount" required=""
-             uib-typeahead="head for head in heads | filter:$viewValue" typeahead-editable="false"
+             uib-typeahead="head for head in heads | filter:$viewValue" typeahead-editable="true"
              class="form-control">
     </div>
     <div class="form-group">
