--- a/app/views/view-organisation.html
+++ b/app/views/view-organisation.html
@@ -23,7 +23,7 @@
                             ng-model="organisation.properties.VoucherTypeName"\><br>
           <a class="btn btn-danger" data-ng-click="cancel()">
               <span class="glyphicon glyphicon-circle-arrow-left"></span>
-              Cancel
+              Back
           </a>
           <a class="btn btn-primary"
              ng-href="#/organisation/{{organisation.id}}/manager/{{managerid}}/edit">
