Employee ExpenseHeads Feature

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -86,7 +86,10 @@
               <a class="list-group-item" data-ng-href="#/organisation/{{organisation.id}}/manager/{{employee.employeeID}}/view">
                   Work with Organization
               </a>
-              <div class="list-group-item">Work with Employees</div>
+              <a class="list-group-item"
+                   data-ng-href="#/organisation/{{organisation.id}}/manager/{{employee.employeeID}}/employees">
+                  Work with Employees
+              </a>
             </div>
           </div>
           <!-- Employee Management ends -->
